--- a/week2.ipynb
+++ b/week2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "week2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPW8ooItFbwBmAvTP2dO+cm",
+      "authorship_tag": "ABX9TyOQ4RM9P5mUbeTlgqC7WpL6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "CbKBzmAiqUOy"
+        "id": "CbKBzmAiqUOy",
+        "outputId": "fa828a95-67e5-4f85-9aa3-41ef4fc99f4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "from google.colab import drive\n",
+        "\n",
+        "#accessing google drive\n",
+        "drive.mount('/content/drive')"
       ]
     }
   ]
